# swarm-path-optimization

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  Copy_DLLs.sh  HACKING.md  README.md
cmake/: dev-mode.cmake  docs.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  qt_utilities.cmake  variables.cmake
docs/: Doxyfile  Doxyfile.in
source/: Constants.hpp  Coord.hpp  PSO.cpp  PSO.hpp  PSOUtils.cpp  PSOUtils.hpp  Params.hpp  lib.cpp  lib.hpp  main.cpp  plot_csv.py
source/Qt/: main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt
test/source/: swarm_optimization_test.cpp
